# MSTROptionsBacktest

./: .gitignore  README.md  logging.yaml  pyproject.toml  ruff.toml  watched_options.json
src/: logger.py
src/mstroptionsbacktest/app/: ivanalyzer.py  ivtracker.py  main.py  main.py_
tools/: open_all_files.py
tools/align/: align.py
tools/align/align_tests/: align_result.py  align_test.py
